[tool.poetry]
name = "homework-13-1-2"
version = "0.1.0"
description = ""
authors = ["Анастасия <bobina_asya@mail.ru>"]
readme = "README.md"
packages = [{include = "homework_13"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
